[tool.poetry]
name = "transformer"
version = "0.1.0"
description = ""
authors = ["Jun Kurihara <junkurihara@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.0.1"
torchtext = "^0.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
